--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
-name = "softwerk-Ocr-Hackathon"
+name = "softwerk-ocr-hackathon"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.102"
+image = "0.25.9"
+pdfium-render = "0.8.37"
