Extract images blazingly fast!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.102"
-image = "0.25.9"
-pdfium-render = "0.8.37"
+rayon = "1.11.0"
