--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.102"
 candle-core = "0.9.2"
+candle-nn = "0.9.2"
 rayon = "1.11.0"
+serde = "1.0.228"
+serde_json = "1.0.149"
