--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.102"
-candle-core = "0.9.2"
-candle-nn = "0.9.2"
+candle-core = {version = "0.9.2", features = ["cuda"]}
+candle-nn = {version = "0.9.2", features = ["cuda"]}
+image = "0.25.9"
 rayon = "1.11.0"
 serde = "1.0.228"
 serde_json = "1.0.149"
+tokenizers = "0.22.2"
